# ELLA

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pages.yml
ELLA/: ELLA.py  __init__.py
archive/issues/: process_geopandas_parquet_segmentation.ipynb
benchmark/: README.md  runner.py  step1_null2.py  step2_cyto_symmetric.py
benchmark/ella_adam/: ELLA.py
benchmark/figures/: make_summary_figure.py
benchmark/output/: cyto_kld.csv  cyto_power.csv  cyto_profiles.csv  cyto_truth.csv  null2_raw.csv  resources.csv
configs/: complete_demo.yaml  debug.yaml  ella_run.yaml  hydra.yaml  mini_demo.yaml
docs/: _config.yml  advanced.md  archived.md  code_merfish1.md  code_merfish2.md  code_seqfish.md  code_seqscope.md  code_stereoseq.md  complete_demo.md  demo.md  demo1.md  demo2.md  demos.md  index.md  input.md  inputs.md  install.md  mini_demo.md  reproduce.md  rp_1.md  rp_2.md  using_a_coding_agent.md
docs/ella_cox/: complete_demo.md  ella_cox.md  home.md  inputs.md  install.md  mini_demo.md
docs/ella_v1/: advanced.md  complete_demo.md  ella1.md  home.md  inputs.md  install.md  mini_demo.md
docs/reproduce/: reproduce.md  rp_2.md  rp_merfish.md  rp_merfish1.md  rp_merfish2.md  rp_seqfish.md  rp_seqscope.md  rp_stereoseq.md
ella/: options.py
ella/cli/: estimate.py  train.py  visualize.py
ella/data/: data_modules.py  datasets.py  prepare_data.py  simulate_data.py
issues/: issue_3.ipynb
notebooks/: debug_simulate_data.ipynb
tests/: test_polygon.py  test_simulate_data.py
updates/: .gitignore  README.md  bottlenecks.md  compare.py  run_baseline.py  run_fit.py  test_vectorize_equiv.py
(+90 files in other folders)
